force-app/main/default/objects/QCC_SearchRecord__mdt/QCC_SearchRecord__mdt.object-meta.xml
<CustomObject>
    <description>Settings for Custom Search 
1. to construct the RETURNING part of the SOSL
2. to provide the columns to display
3. to show the icon for lighting card</description>
    <label>QCC SearchRecord</label>
    <pluralLabel>QCC SearchRecords</pluralLabel>
</CustomObject>