force-app/main/default/objects/QCC_SearchRecord__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mark this True if the object has to be included in the search</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>