force-app/main/default/objects/QCC_SearchRecord__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <description>Contain the Columns format for the data table to display
Example
{ label: &apos;Name&apos;, fieldName: &apos;CaseNumber&apos;,type: &apos;url&apos;, typeAttributes: { label:{fieldName: &apos;CaseNumber&apos;},target: &apos;_self&apos;}},
{ label: &apos;Email&apos;, fieldName: &apos;ContactEmail&apos;, type: &apos;email&apos; },
{ label: &apos;Phone&apos;, fieldName: &apos;ContactMobile&apos;, type: &apos;phone&apos; }</description>
    <label>Columns</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>