force-app/main/default/objects/QCC_SearchRecord__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <defaultValue>&apos;standard:search&apos;</defaultValue>
    <description>Contains the Icon to be displayed in the lighning:card
Example:
standard:case</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>