force-app/main/default/objects/QCC_SearchRecord__mdt/fields/Load_More_Page_Limit__c.field-meta.xml
<CustomField>
    <fullName>Load_More_Page_Limit__c</fullName>
    <label>Load More Page Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>